Preserve deterministic switch trigger registry order